<resources>
    <string name="app_name">Official Imperial Business</string>
    <string name="official_imperial_business">O f f i c i a l\nI m p e r i a l\nB u s i n e s s</string>
    <string name="membership_exam">Membership Exam</string>
    <string name="member_text">In order to gain membership to OIB, you must answer several questions pertaining to our legacy. Good luck.</string>
    <string name="begin_exam">Begin Exam</string>
    <string name="copyright">Background Images are Copyright Bungie, Inc — All rights reserved.</string>
    <string name="destiny">Destiny</string>
    <string name="embodiment_of_beauty">The Embodiment of Beauty</string>
    <string name="embodiment_of_possibility">The Embodiment of Possibility</string>
    <string name="embodiment_of_nothing">The Embodiment of Nothing</string>
    <string name="embodiment_of_even">The Embodiment of Even</string>
    <string name="embodiment_of_magnificence">The Embodiment of Magnificence</string>
    <string name="embodiment_winnebago">The Embodiment Winnebago</string>
    <string name="embodiment_of_perfection">The Embodiment of Perfection</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="over_9000">Your score is over 9000.</string>
    <string name="share_button">Share</string>
    <string name="final_score_text">Final Score</string>
    <string name="zero_precent">0%</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="question_1_chris_is">Question 1: Chris is…</string>
    <string name="question_2_steven_is">Question 2: Steven is…</string>
    <string name="question_3_tim_is">Question 3: Tim is…</string>
    <string name="question_4_mark_is">Question 4: Mark is…</string>
    <string name="question_5_josh_is">Question 5: Josh is…</string>
    <string name="question_6_jack_is">Question 6: Jack is…</string>
    <string name="question_7_do_you_even_know_what_jason_is_though">Question 7: Do you even know what Jason is though?</string>
    <string name="question_8_what_is_the_fastest_object_in_the_universe">Question 8: What is the fastest object in the universe?</string>
    <string name="a_particle_of_light">A particle of light</string>
    <string name="an_imperial_guard">an Imperial Guard</string>
    <string name="the_millennium_falcon">The Millennium Falcon</string>
    <string name="question_9_these_are_the_final_hours_of">Question 9: These are the final hours of…</string>
    <string name="my_death">My death</string>
    <string name="my_sons">My sons</string>
    <string name="halt_you_violated_the_law">Halt! You violated the law.</string>
    <string name="question_10_what">Question 10: What?</string>
    <string name="subaru_wrx_sti">Subaru WRX STI</string>
    <string name="wrx_sti">WRX STI</string>
    <string name="sti">STI</string>
    <string name="question_11_did_you_see_the_mudcrabs_by_the_lake">Question 11: Did you see the mudcrabs by the lake?</string>
    <string name="the_dark_brotherhood_must_have_killed_them">The Dark Brotherhood must have killed them!</string>
    <string name="no_please_ahhhhhhhhhm_sorry">No please! Ahhhhhhhhhm sorry!</string>
    <string name="by_azure_it_s_the_grand_champion">By Azure, it\'s the grand champion!</string>
    <string name="question_12_are_you_the_count">Question 12: Are you the count?</string>
    <string name="yes">Yes.</string>
    <string name="then_go_away">Then go away.</string>
    <string name="you_re_a_liar">You\'re a liar.</string>
    <string name="question_13_why_won_t_you_die">Question 13: Why… won\'t… you… die?!</string>
    <string name="breton_scum">Breton scum.</string>
    <string name="now_you_will_know_pain">Now you will know pain!</string>
    <string name="stop_right_there_criminal_scum">Stop right there. Criminal scum</string>
    <string name="question_14_of_the_following_what_would_an_imperial_guard_consider_illegal">Question 14: Of the following, what would an Imperial Guard consider illegal?</string>
    <string name="attacking_another_citizen">Attacking another citizen.</string>
    <string name="picking_up_a_book_in_the_library">Picking up a book in the library.</string>
    <string name="knocking_another_citizen_out_cold_with_one_punch">Knocking another citizen out cold with one punch.</string>
    <string name="submit_for_scoring">Submit for Scoring</string>
</resources>
