<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.holtnet.officialimperialbusiness.ExamActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corners_dark"
            android:padding="8dp"
            android:text="@string/membership_exam"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/enter_your_name" />

        <EditText
            android:id="@+id/EnterNameID"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:hint="@string/destiny" />

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_1_chris_is" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q1answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_beauty" />

            <RadioButton
                android:id="@+id/q1answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_possibility" />

            <RadioButton
                android:id="@+id/q1answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_nothing" />

            <RadioButton
                android:id="@+id/q1destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_2_steven_is" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q2answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_even" />

            <RadioButton
                android:id="@+id/q2answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_beauty" />

            <RadioButton
                android:id="@+id/q2answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_magnificence" />

            <RadioButton
                android:id="@+id/q2destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_3_tim_is" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q3answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_nothing" />

            <RadioButton
                android:id="@+id/q3answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_possibility" />

            <RadioButton
                android:id="@+id/q3answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_winnebago" />

            <RadioButton
                android:id="@+id/q3destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_4_mark_is" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q4answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_perfection" />

            <RadioButton
                android:id="@+id/q4answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_beauty" />

            <RadioButton
                android:id="@+id/q4answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_nothing" />

            <RadioButton
                android:id="@+id/q4destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_5_josh_is" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q5answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_possibility" />

            <RadioButton
                android:id="@+id/q5answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_magnificence" />

            <RadioButton
                android:id="@+id/q5answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_even" />

            <RadioButton
                android:id="@+id/q5destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_6_jack_is" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q6answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_beauty" />

            <RadioButton
                android:id="@+id/q6answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_winnebago" />

            <RadioButton
                android:id="@+id/q6answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_nothing" />

            <RadioButton
                android:id="@+id/q6destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_7_do_you_even_know_what_jason_is_though" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q7answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_nothing" />

            <RadioButton
                android:id="@+id/q7answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_of_even" />

            <RadioButton
                android:id="@+id/q7answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/embodiment_winnebago" />

            <RadioButton
                android:id="@+id/q7destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_8_what_is_the_fastest_object_in_the_universe" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q8answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/a_particle_of_light" />

            <RadioButton
                android:id="@+id/q8answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/an_imperial_guard" />

            <RadioButton
                android:id="@+id/q8answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/the_millennium_falcon" />

            <RadioButton
                android:id="@+id/q8destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_9_these_are_the_final_hours_of" />

        <RadioGroup style="@style/radioGroup">

            <RadioButton
                android:id="@+id/q9answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/my_death" />

            <RadioButton
                android:id="@+id/q9answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/my_sons" />

            <RadioButton
                android:id="@+id/q9answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/halt_you_violated_the_law" />

            <RadioButton
                android:id="@+id/q9destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_10_what" />

        <RadioGroup style="@style/radioButton">

            <RadioButton
                android:id="@+id/q10answer"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/subaru_wrx_sti" />

            <RadioButton
                android:id="@+id/q10answer2"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/wrx_sti" />

            <RadioButton
                android:id="@+id/q10answer3"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/sti" />

            <RadioButton
                android:id="@+id/q10destiny"
                style="@style/radioButton"
                android:padding="8dp"
                android:text="@string/destiny" />
        </RadioGroup>

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_11_did_you_see_the_mudcrabs_by_the_lake" />

        <CheckBox
            android:id="@+id/q11a1"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/the_dark_brotherhood_must_have_killed_them" />

        <CheckBox
            android:id="@+id/q11aw1"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/no_please_ahhhhhhhhhm_sorry" />

        <CheckBox
            android:id="@+id/q11a2"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/by_azure_it_s_the_grand_champion" />

        <CheckBox
            android:id="@+id/q11destiny"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/destiny" />

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_12_are_you_the_count" />

        <CheckBox
            android:id="@+id/q12a1"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/yes" />

        <CheckBox
            android:id="@+id/q12a2"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/then_go_away" />

        <CheckBox
            android:id="@+id/q12a3"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/you_re_a_liar" />

        <CheckBox
            android:id="@+id/q12destiny"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/destiny" />

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_13_why_won_t_you_die" />

        <CheckBox
            android:id="@+id/q13a1"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/breton_scum" />

        <CheckBox
            android:id="@+id/q13a2"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/now_you_will_know_pain" />

        <CheckBox
            android:id="@+id/q13a3"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/stop_right_there_criminal_scum" />

        <CheckBox
            android:id="@+id/q13destiny"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/destiny" />

        <TextView
            style="@style/questionText"
            android:padding="8dp"
            android:text="@string/question_14_of_the_following_what_would_an_imperial_guard_consider_illegal" />

        <CheckBox
            android:id="@+id/q14a1"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/attacking_another_citizen" />

        <CheckBox
            android:id="@+id/q14a2"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/picking_up_a_book_in_the_library" />

        <CheckBox
            android:id="@+id/q14aw1"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/knocking_another_citizen_out_cold_with_one_punch" />

        <CheckBox
            android:id="@+id/q14destiny"
            style="@style/checkBox"
            android:padding="8dp"
            android:text="@string/destiny" />

        <Button
            android:id="@+id/end_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners_dark"
            android:padding="8dp"
            android:text="@string/submit_for_scoring"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</ScrollView>
